# ai-dataset-health-zos

./: .gitignore  AGENTS.md  AI_Dataset_Health_for_zOS_TAC_Deck.pptx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  PROPOSAL.md  README.md  TAC_Presentation.md  health.py  list_files.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/ai_dataset_health_zos/: cli.py
tests/: test_cli.py  test_cli_health.py  test_health_basic.py  test_list_files.py
