[project]
name = "ai-dataset-health-zos"
version = "0.0.1"
description = "AI Dataset Health for z/OS via z/OSMF"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.scripts]
ai-dataset-health-zos = "ai_dataset_health_zos.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
pretty = true
